--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,15 @@
 :root {
-    --background: #0D0D0D;
-    --primary-color: #563A9C;
-    --secondary-color: #8B5DFF;
-    --highlight-color: #FFF7D1;
-    --navbar-height: 10vh;
-    --searchbox-width: calc(30vw);
-    --nav-item-size: calc(1.5rem + 1vw);
-    --logo-size: calc(0.8 * var(--navbar-height));
-    --sidebar-width: calc(35vw);
-    --sidebar-height: calc(70vh);
-    --transition-speed: 0.3s;
+  --background: #0d0d0d;
+  --primary-color: #563a9c;
+  --secondary-color: #8b5dff;
+  --highlight-color: #fff7d1;
+  --navbar-height: 10vh;
+  --searchbox-width: calc(30vw);
+  --nav-item-size: calc(1.5rem + 1vw);
+  --logo-size: calc(0.8 * var(--navbar-height));
+  --sidebar-width: calc(35vw);
+  --sidebar-height: calc(70vh);
+  --transition-speed: 0.3s;
 }
 
 /* General Styles */
@@ -19,7 +19,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: var(--background);
   scroll-behavior: smooth;
   overflow: auto;
@@ -169,7 +169,8 @@ body {
 .side-menu {
   display: flex;
   position: fixed;
-  border-radius: 0 calc(0.2*var(--sidebar-width)) calc(0.2*var(--sidebar-width))  0;
+  border-radius: 0 calc(0.2 * var(--sidebar-width))
+    calc(0.2 * var(--sidebar-width)) 0;
   border: solid;
   border-color: var(--highlight-color);
   border-width: 1px;
@@ -218,17 +219,11 @@ body {
   color: var(--highlight-color);
 }
 .footer:hover {
-  text-shadow: 
-  0 0 5px var(--secondary-color),
-  0 0 10px var(--secondary-color),
-  0 0 15px var(--secondary-color),
-  0 0 20px var(--secondary-color),
-  0 0 25px var(--secondary-color),
-  0 0 30px var(--secondary-color),
-  0 0 35px var(--secondary-color),
-  0 0 40px var(--secondary-color),
-  0 0 45px var(--secondary-color),
-  0 0 50px var(--secondary-color);
+  text-shadow: 0 0 5px var(--secondary-color), 0 0 10px var(--secondary-color),
+    0 0 15px var(--secondary-color), 0 0 20px var(--secondary-color),
+    0 0 25px var(--secondary-color), 0 0 30px var(--secondary-color),
+    0 0 35px var(--secondary-color), 0 0 40px var(--secondary-color),
+    0 0 45px var(--secondary-color), 0 0 50px var(--secondary-color);
 }
 
 /* Accordion Container */
@@ -291,7 +286,7 @@ body {
 .accordion-item input:checked + label .icon {
   transform: rotate(45deg);
 }
-    
+
 /* List Styling */
 .accordion-item ul {
   list-style: none;
@@ -305,7 +300,7 @@ body {
   text-align: center;
 }
 
-.accordion-item ul li{
+.accordion-item ul li {
   padding: 2px;
   margin: 1px;
   text-align: center;
@@ -328,3 +323,249 @@ body {
   background-color: var(--secondary-color);
 }
 /**********************************************************************************************************************/
+
+.img {
+  width: 100%;
+  flex-shrink: 0;
+  display: block;
+  object-fit: cover;
+}
+.list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.player {
+  width: 17.15em;
+  display: flex;
+  overflow: hidden;
+  font-size: 1.22em;
+  border-radius: 1.35em;
+  flex-direction: column;
+  background-color: white;
+  height: var(--parent-height);
+}
+.player__header {
+  z-index: 1;
+  gap: 0 0.4em;
+  width: 100%;
+  display: flex;
+  height: 5.85em;
+  flex-shrink: 0;
+  position: relative;
+  align-items: flex-start;
+  border-radius: inherit;
+  justify-content: flex-end;
+  background-color: white;
+  padding: 0.95em 0.6em 0 1.2em;
+  box-shadow: 0 2px 6px 1px #0000001f;
+  transition: height var(--cubic-header), box-shadow var(--duration),
+    padding var(--duration) ease-in-out;
+}
+.player__header.open-header {
+  height: 100%;
+  padding-left: 0;
+  padding-right: 0;
+  box-shadow: unset;
+}
+.player__img {
+  width: 3.22em;
+  height: 3.22em;
+  border-radius: 1.32em;
+}
+.player__img--absolute {
+  top: 1.4em;
+  left: 1.2em;
+  position: absolute;
+}
+.slider {
+  flex-shrink: 0;
+  overflow: hidden;
+  transition: width var(--cubic-header), height var(--cubic-header),
+    top var(--cubic-header), left var(--cubic-header);
+}
+.slider.open-slider {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 14.6em;
+}
+.slider__content {
+  display: flex;
+  height: 100%;
+  will-change: transform;
+  transition: transform var(--cubic-slider);
+}
+.slider__img {
+  filter: brightness(75%);
+}
+.slider__name,
+.slider__title {
+  overflow: hidden;
+  white-space: nowrap;
+}
+.text-wrap {
+  display: block;
+  white-space: pre;
+  width: fit-content;
+  animation: text-wrap var(--duration-text-wrap) infinite;
+}
+@keyframes text-wrap {
+  75% {
+    transform: translate3d(-51.5%, 0, 0);
+  }
+  100% {
+    transform: translate3d(-51.5%, 0, 0);
+  }
+}
+.player__button {
+  all: unset;
+  z-index: 100;
+  width: 2.5em;
+  height: 2.5em;
+  cursor: pointer;
+}
+.playlist {
+  transform: scale(0);
+  transition: transform calc(var(--duration) / 2);
+}
+.slider.open-slider .playlist {
+  transform: scale(1);
+  transition: transform var(--cubic-play-list);
+}
+.player__button--absolute--nw {
+  top: 5.5%;
+  left: 5.5%;
+  position: absolute;
+}
+.player__button--absolute--center {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+}
+img[alt="pause-icon"] {
+  display: none;
+}
+.player__controls {
+  width: 77%;
+  gap: 0.5em 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  will-change: contents;
+  align-content: center;
+  justify-content: center;
+  transition: transform var(--cubic-header), width var(--cubic-header);
+}
+.player__controls.move {
+  width: 88%;
+  transform: translate3d(-1.1em, calc(var(--parent-height) - 153%), 0);
+}
+.player__context {
+  margin: 0;
+  width: 100%;
+  display: flex;
+  line-height: 1.8;
+  flex-direction: column;
+  justify-content: center;
+  text-transform: capitalize;
+}
+.slider__context {
+  width: 56.28%;
+  cursor: pointer;
+  text-align: center;
+  padding-bottom: 0.2em;
+  will-change: contents;
+  transition: width var(--cubic-header);
+  animation: calc(var(--duration) / 2) var(--cubic-slider-context);
+}
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+}
+.player__controls.move .slider__context {
+  width: 49.48%;
+}
+.player__title {
+  font-size: 0.7em;
+  font-weight: bold;
+  color: #00000086;
+}
+.progres {
+  width: 90%;
+  height: 0.25em;
+  cursor: pointer;
+  border-radius: 1em;
+  touch-action: none;
+  background-color: #e5e7ea;
+  transition: width var(--cubic-header);
+}
+.player__controls.move .progres {
+  width: 98%;
+}
+.progres__filled {
+  width: 0%;
+  height: 100%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  border-radius: inherit;
+  background-color: #78adfe;
+}
+.progres__filled::before {
+  right: 0;
+  width: 0.35em;
+  content: " ";
+  height: 0.35em;
+  border-radius: 50%;
+  position: absolute;
+  background-color: #5781bd;
+}
+.player__playlist {
+  height: 100%;
+  overflow: auto;
+  padding: 1.05em 0.9em 0 1.2em;
+}
+.player__playlist::-webkit-scrollbar {
+  width: 0;
+}
+.player__song {
+  /* gap: 0 .65em ; */
+  display: flex;
+  cursor: pointer;
+  margin-bottom: 0.5em;
+  padding-bottom: 0.7em;
+  border-bottom: 0.1em solid #d8d8d859;
+}
+.player__song .player__context {
+  line-height: 1.5;
+  margin-left: 0.65em;
+}
+.player__song-name {
+  font-size: 0.88em;
+}
+.player__song-time {
+  font-size: 0.65em;
+  font-weight: bold;
+  color: #00000079;
+  height: fit-content;
+  align-self: flex-end;
+}
+.audio {
+  display: none !important ;
+}
