updated CSS and template for nav bar

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,10 @@
 <nav class="navbar">
-  <div class="brand logo">
+  <div class="brand">
     <img class="logo" src="{{ url_for('static', filename='icon.png') }}" alt="Resonix" />
     <h1>Resonix</h1>
   </div>
-  <div class="center-nav">
-    <a href="/" class="navitem active" onclick="select(this)" data-clr="#740DAD">
+  <div class="navitem">
+    <a href="/" class="active" onclick="select(this)" data-clr="#740DAD">
       <ion-icon name="home"></ion-icon>
     </a>
     <div class="navsearch">
