--- a/templates/s_menu_user.html
+++ b/templates/s_menu_user.html
@@ -74,7 +74,19 @@
         <li><a href="#">- Notifications</a></li>
       </ul>
     </div>
-
+    
+    <!-- Change Theme -->
+    <div class="accordion-item">
+      <input type="radio" name="accordion" id="theme" />
+      <label for="theme">
+        Theme
+        <span class="icon">+</span>
+      </label>
+      <ul>
+        <li><a href="#">- Playlists</a></li>
+      </ul>
+    </div>
+  
     <!-- Help & Support -->
     <div class="accordion-item">
       <input type="radio" name="accordion" id="help-support">
