--- a/templates/s_menu_user.html
+++ b/templates/s_menu_user.html
@@ -1,27 +1,26 @@
-<!-- Side Menu -->
-<div class="side-menu">
-  <!-- Profile Section -->
-   <div class="profile">
-    <img src="{{url_for('static', filename='icon1.png')}}" alt="User">
-    <h2>{{ user.username }}</h2>
+{% extends 'side_menu.html' %}
+{% block img %}
+  {{ url_for('static', filename='profiles/' + user.avatar )}}
+{% endblock %}
+{% block name %}
+  {{ user.username }}
+{% endblock %}
+{% block home_menu %}
+  <!-- Dashboard -->
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="dashboard">
+    <label for="dashboard">
+      Dashboard
+      <span class="icon">+</span>
+    </label>
+    <ul>
+      <li><a href="#">- Overview</a></li>
+      <li><a href="#">- Notifications</a></li>
+    </ul>
   </div>
-  <div class="accordion">
-    <!-- Dashboard -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="dashboard">
-      <label for="dashboard">
-        Dashboard
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="#">- Overview</a></li>
-        <li><a href="#">- Notifications</a></li>
-      </ul>
-    </div>
-
-    <!-- Profile -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="profile">
+  <!-- Profile -->
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="profile">
       <label for="profile">
         Profile
         <span class="icon">+</span>
@@ -74,61 +73,18 @@
         <li><a href="#">- Notifications</a></li>
       </ul>
     </div>
-    
-    <!-- Change Theme -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="theme" />
-      <label for="theme">
-        Theme
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="#">- Playlists</a></li>
-      </ul>
-    </div>
-  
-    <!-- Help & Support -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="help-support">
-      <label for="help-support">
-        Help & Support
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="#">- FAQ</a></li>
-        <li><a href="#">- Contact Support</a></li>
-        <li><a href="#">- Knowledge Base</a></li>
-      </ul>
-    </div>
-
-    <!-- Themes -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="themes">
-      <label for="themes">
-        Themes
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="#">- FAQ</a></li>
-      </ul>
-    </div>
-
-    <!-- Logout -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="logout">
-      <label for="logout">
-        Logout
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="/logout">- Sign Out</a></li>
-        <li><a href="/">- Delete Account</a></li>
-      </ul>
-    </div>
+{% endblock %}
+{% block login_action %}
+  <!-- Logout -->
+  <div class="accordion-item">
+    <input type="radio" name="accordion" id="logout">
+    <label for="logout">
+      Logout
+      <span class="icon">+</span>
+    </label>
+    <ul>
+      <li><a href="/logout">- Sign Out</a></li>
+      <li><a href="/">- Delete Account</a></li>
+    </ul>
   </div>
-  <!-- Footer -->
-  <div class="footer">
-    App Version 1.0.0 <br>
-    Powered by Resonix
-  </div>
-</div>
+{% endblock %}
