--- a/templates/s_menu_user.html
+++ b/templates/s_menu_user.html
@@ -84,7 +84,7 @@
     </label>
     <ul>
       <li><a href="/logout">- Sign Out</a></li>
-      <li><a href="/">- Delete Account</a></li>
+      <li><a href="/delete_account">- Delete Account</a></li>
     </ul>
   </div>
 {% endblock %}
