--- a/templates/side_menu.html
+++ b/templates/side_menu.html
@@ -26,7 +26,7 @@
     <div class="accordion-item">
       <input type="radio" name="accordion" id="theme" />
       <label for="theme">
-        Theme
+        Themes
         <span class="icon">+</span>
       </label>
       <ul>
@@ -41,6 +41,34 @@
         <li>
           <input type="radio" name="theme" id="theme-light" />
           <label for="theme-light">Light</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-greendarkgray" />
+          <label for="theme-greendarkgray">Green-Dark-Gray</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-deeppurple" />
+          <label for="theme-deeppurple">Deep Purple & Electric Pink</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-royalblue" />
+          <label for="theme-royalblue">Royal Blue & Pastel Yellow</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-orangecharcoal" />
+          <label for="theme-orangecharcoal">Burnt Orange & Charcoal</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-tealpeach" />
+          <label for="theme-tealpeach">Teal & Peach</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-magentablack" />
+          <label for="theme-magentablack">Magenta & Black</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-darkolivecream" />
+          <label for="theme-darkolivecream">Dark Olive & Cream</label>
         </li>
       </ul>
     </div>
