updated app for some changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Resonix - Music Streaming Application{% endblock %}
+{% block title %}Music Streaming Application{% endblock %}
 
 {% block content %}
 <section class="home">
