--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>Resonix - {% block title %}{% endblock %}</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='icon.png') }}" type="image/x-icon"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     
