--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,13 @@
   </head>
   <body>
     
-    {% include 'header.html' %} 
-    {% block content %} {% endblock %}
+    {% include 'header.html' %}
+    <div class="container">
+      {% block content %} {% endblock %}
+    </div>
+    {%if user %}    
+    {% include 'player.html' %}
+    {% endif %}
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
