--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
   --logo-size: calc(0.6 * var(--navbar-height));
   --sidebar-width: calc(35vw);
   --sidebar-height: calc(70vh);
-  --transition-speed: 1s;
+  --transition-speed: 0.3s;
 }
 
 /* General Styles */
@@ -24,6 +24,11 @@ body {
   color: var(--highlight-color);
   transition: all var(--transition-speed) ease;
   scroll-behavior: smooth;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   overflow: auto;
 }
 
@@ -362,7 +367,7 @@ ion-icon[name="home"] {
   background-color: var(--secondary-color);
 }
 
-/*********************************************************** THEME ***********************************************************/
+/*********************************************************** THEMES ***********************************************************/
 
 /* Theme Variables */
 [data-theme="default"] {
@@ -452,6 +457,62 @@ ion-icon[name="home"] {
 /* Input Styling for Radio Buttons */
 .accordion-item ul li input[type="radio"] {
   display: none;
+}
+
+/*********************************************************** PLAYER ***********************************************************/
+.audio-player {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: var(--navbar-height);
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  color: var(--highlight-color);
+}
+
+.audio-img img{
+  width: calc(0.7*var(--navbar-height));
+  height: calc(0.7*var(--navbar-height));
+  border-radius: 50%;
+  margin: 2px;
+  object-fit: cover;
+}
+
+.audio-title {
+  font-size: 1.2rem;
+  color: var(--highlight-color);
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5px;
+  font-size: 1rem;
+}
+
+.audio-controls {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5px;
+  align-items: center;
+  font-size: 1.2rem;
+  color: var(--highlight-color);
+  width: 60vw;
+}
+.audio-controls action {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5px;
+  align-items: center;
+}
+
+.audio-controls progress {
+  width: 100%;
+  height: 0.2em;
+  appearance: none;
+  background-color: var(--primary -color);
 }
 
 /**********************************************************************************************************************/
