updated templates and CSS for audio play button

--- a/static/style.css
+++ b/static/style.css
@@ -83,8 +83,8 @@ body {
   justify-content: center;
   flex: 1;
   max-height: 100%;
-  gap: 1rem; /* Adds space between buttons */
-  position: relative; /* Ensures search icon aligns properly */
+  gap: 1rem;
+  position: relative;
 }
 
 /* Home Button Styling */
@@ -93,7 +93,6 @@ a {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  padding: 0.5rem;
   transition: background-color var(--transition-speed) ease, color var(--transition-speed) ease;
   font-size: 1.5rem;
 }
@@ -105,7 +104,7 @@ a:hover {
 
 /* Home Icon */
 ion-icon[name="home"] {
-  color: var(--secondary-color);
+  color: var(--highlight-color);
   font-size: 2rem;
 }
 
@@ -142,7 +141,7 @@ ion-icon[name="home"] {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  color: var(--secondary-color);
+  color: var(--highlight-color);
   cursor: pointer;
   transition: color var(--transition-speed) ease, transform var(--transition-speed) ease;
 }
@@ -181,7 +180,7 @@ ion-icon[name="home"] {
 .hamburger-lines .line {
   height: 4px;
   width: 100%;
-  background-color: var(--secondary-color);
+  background-color: var(--highlight-color);
   border-radius: 5px;
   transition: all var(--transition-speed) ease-in-out;
 }
@@ -189,7 +188,7 @@ ion-icon[name="home"] {
 /* Active State Animations */
 .hamburger.active .line:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
-  background-color: var(--highlight-color);
+  background-color: var(--secondary-color);
 }
 
 .hamburger.active .line:nth-child(2) {
@@ -198,7 +197,7 @@ ion-icon[name="home"] {
 
 .hamburger.active .line:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
-  background-color: var(--highlight-color); /* Changes to highlight color */
+  background-color: var(--secondary-color);
 }
 
 /* Accessibility: Focus State */
@@ -460,305 +459,117 @@ ion-icon[name="home"] {
 }
 
 /*********************************************************** PLAYER ***********************************************************/
-.audio-player {
+
+.music-player-bar {
   position: fixed;
-  bottom: 0;
+  bottom: 100px;
   left: 0;
   width: 100%;
   height: var(--navbar-height);
-  background-color: var(--primary-color);
+  background: var(--primary-color);
+  color: var(--highlight-color);
   display: flex;
   align-items: center;
-  padding: 0 10px;
-  color: var(--highlight-color);
+  padding: 5px 10px;
 }
 
-.audio-img img{
-  width: calc(0.7*var(--navbar-height));
-  height: calc(0.7*var(--navbar-height));
+.song-info {
+  display: flex;
+  align-items: center;
+  width: auto;
+}
+
+.cover {
+  width: calc(0.8 * var(--navbar-height));
+  height: calc(0.8 * var(--navbar-height));
   border-radius: 50%;
-  margin: 2px;
   object-fit: cover;
 }
 
-.audio-title {
-  font-size: 1.2rem;
-  color: var(--highlight-color);
-  margin: 5px;
+.details {
   display: flex;
+  margin: 0px 10px;
   flex-direction: column;
-  gap: 0.5px;
-  font-size: 1rem;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.audio-controls {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 0.5px;
-  align-items: center;
-  font-size: 1.2rem;
+#song-name {
+  font-size: 14px;
+  font-weight: bold;
   color: var(--highlight-color);
-  width: 60vw;
 }
-.audio-controls action {
+
+#artist-name {
+  font-size: 12px;
+  color: var(--highlight-color);
+}
+
+.like-button {
+  font-size: 1.8rem;
+  color: var(--highlight-color);
+  transition: all var(--transition-speed) ease;
+}
+
+.like-button.liked ion-icon {
+  color: var(--secondary-color);
+  transform: scale(1.2);
+}
+
+.music-player{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  align-items: center;
+  width: 50vw;
+  height: calc(0.8 * var(--navbar-height));
+}
+
+.music-controls {
   display: flex;
   flex-direction: row;
-  gap: 0.5px;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: calc(0.4 * var(--navbar-height));
+  gap: 10px;
 }
 
-.audio-controls progress {
+.control-btn {
+  font-size: 1rem;
+  color: var(--highlight-color);
+  cursor: pointer;
+  transition: transform 0.3s, color 0.3s;
+}
+
+.control-btn:hover {
+  color: var(--secondary-color);
+  transform: scale(1.2);
+}
+
+.progress-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
-  height: 0.2em;
-  appearance: none;
-  background-color: var(--primary -color);
+  height: calc(0.4 * var(--navbar-height));
+}
+
+.progress-time {
+  font-size: 12px;
+  width: 5vw;
+  height: calc(0.4 * var(--navbar-height));
+  text-align: center;
+}
+
+#progress {
+  width: 40vw;
+  height: calc(0.4 * var(--navbar-height));
+  margin: 0 5px;
+  accent-color: var(--highlight-color);
 }
 
 /**********************************************************************************************************************/
-
-.img {
-  width: 100%;
-  flex-shrink: 0;
-  display: block;
-  object-fit: cover;
-}
-.list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.uppercase {
-  text-transform: uppercase;
-}
-.player {
-  width: 17.15em;
-  display: flex;
-  overflow: hidden;
-  font-size: 1.22em;
-  border-radius: 1.35em;
-  flex-direction: column;
-  background-color: white;
-  height: var(--parent-height);
-}
-.player__header {
-  z-index: 1;
-  gap: 0 0.4em;
-  width: 100%;
-  display: flex;
-  height: 5.85em;
-  flex-shrink: 0;
-  position: relative;
-  align-items: flex-start;
-  border-radius: inherit;
-  justify-content: flex-end;
-  background-color: white;
-  padding: 0.95em 0.6em 0 1.2em;
-  box-shadow: 0 2px 6px 1px #0000001f;
-  transition: height var(--cubic-header), box-shadow var(--duration),
-    padding var(--duration) ease-in-out;
-}
-.player__header.open-header {
-  height: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  box-shadow: unset;
-}
-.player__img {
-  width: 3.22em;
-  height: 3.22em;
-  border-radius: 1.32em;
-}
-.player__img--absolute {
-  top: 1.4em;
-  left: 1.2em;
-  position: absolute;
-}
-.slider {
-  flex-shrink: 0;
-  overflow: hidden;
-  transition: width var(--cubic-header), height var(--cubic-header),
-    top var(--cubic-header), left var(--cubic-header);
-}
-.slider.open-slider {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 14.6em;
-}
-.slider__content {
-  display: flex;
-  height: 100%;
-  will-change: transform;
-  transition: transform var(--cubic-slider);
-}
-.slider__img {
-  filter: brightness(75%);
-}
-.slider__name,
-.slider__title {
-  overflow: hidden;
-  white-space: nowrap;
-}
-.text-wrap {
-  display: block;
-  white-space: pre;
-  width: fit-content;
-  animation: text-wrap var(--duration-text-wrap) infinite;
-}
-@keyframes text-wrap {
-  75% {
-    transform: translate3d(-51.5%, 0, 0);
-  }
-  100% {
-    transform: translate3d(-51.5%, 0, 0);
-  }
-}
-.player__button {
-  all: unset;
-  z-index: 100;
-  width: 2.5em;
-  height: 2.5em;
-  cursor: pointer;
-}
-.playlist {
-  transform: scale(0);
-  transition: transform calc(var(--duration) / 2);
-}
-.slider.open-slider .playlist {
-  transform: scale(1);
-  transition: transform var(--cubic-play-list);
-}
-.player__button--absolute--nw {
-  top: 5.5%;
-  left: 5.5%;
-  position: absolute;
-}
-.player__button--absolute--center {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  position: absolute;
-}
-img[alt="pause-icon"] {
-  display: none;
-}
-.player__controls {
-  width: 77%;
-  gap: 0.5em 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  will-change: contents;
-  align-content: center;
-  justify-content: center;
-  transition: transform var(--cubic-header), width var(--cubic-header);
-}
-.player__controls.move {
-  width: 88%;
-  transform: translate3d(-1.1em, calc(var(--parent-height) - 153%), 0);
-}
-.player__context {
-  margin: 0;
-  width: 100%;
-  display: flex;
-  line-height: 1.8;
-  flex-direction: column;
-  justify-content: center;
-  text-transform: capitalize;
-}
-.slider__context {
-  width: 56.28%;
-  cursor: pointer;
-  text-align: center;
-  padding-bottom: 0.2em;
-  will-change: contents;
-  transition: width var(--cubic-header);
-  animation: calc(var(--duration) / 2) var(--cubic-slider-context);
-}
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-  90% {
-    opacity: 1;
-  }
-}
-.player__controls.move .slider__context {
-  width: 49.48%;
-}
-.player__title {
-  font-size: 0.7em;
-  font-weight: bold;
-  color: #00000086;
-}
-.progres {
-  width: 90%;
-  height: 0.25em;
-  cursor: pointer;
-  border-radius: 1em;
-  touch-action: none;
-  background-color: #e5e7ea;
-  transition: width var(--cubic-header);
-}
-.player__controls.move .progres {
-  width: 98%;
-}
-.progres__filled {
-  width: 0%;
-  height: 100%;
-  display: flex;
-  position: relative;
-  align-items: center;
-  border-radius: inherit;
-  background-color: #78adfe;
-}
-.progres__filled::before {
-  right: 0;
-  width: 0.35em;
-  content: " ";
-  height: 0.35em;
-  border-radius: 50%;
-  position: absolute;
-  background-color: #5781bd;
-}
-.player__playlist {
-  height: 100%;
-  overflow: auto;
-  padding: 1.05em 0.9em 0 1.2em;
-}
-.player__playlist::-webkit-scrollbar {
-  width: 0;
-}
-.player__song {
-  /* gap: 0 .65em ; */
-  display: flex;
-  cursor: pointer;
-  margin-bottom: 0.5em;
-  padding-bottom: 0.7em;
-  border-bottom: 0.1em solid #d8d8d859;
-}
-.player__song .player__context {
-  line-height: 1.5;
-  margin-left: 0.65em;
-}
-.player__song-name {
-  font-size: 0.88em;
-}
-.player__song-time {
-  font-size: 0.65em;
-  font-weight: bold;
-  color: #00000079;
-  height: fit-content;
-  align-self: flex-end;
-}
-.audio {
-  display: none !important ;
-}
