--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
     {%if user %}    
     {% include 'player.html' %}
     {% endif %}
-
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const themeSwitcher = document.querySelectorAll(
