--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     <h1>Resonix</h1>
   </div>
   <div class="navitem">
-    <a href="/" class="active" onclick="select(this)" data-clr="#740DAD">
+    <a href="/" class="active">
       <ion-icon name="home"></ion-icon>
     </a>
     <div class="navsearch">
@@ -29,8 +29,6 @@
   {% include 's_menu_unko.html' %}
 {% endif %}
 
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script>
   const sideMenu = document.querySelector('.side-menu');
   const hamburger = document.querySelector('.hamburger');
