--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,13 @@
 {% block title %}Music Streaming Application{% endblock %}
 
 {% block content %}
-<section class="home">
-
-</section>
+<div class="home">
+    adafs<br>
+    fsdfsf<br>
+    sdgfgsfs<br>
+    fsfsdfdsdfsdf<br>
+    dgsdfdsf<br>
+    dsfdf<br>
+    dsfd<br>
+</div>
 {% endblock %}
