--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
   --logo-size: calc(0.6 * var(--navbar-height));
   --sidebar-width: calc(35vw);
   --sidebar-height: calc(70vh);
-  --transition-speed: 0.3s;
+  --transition-speed: 0.2s;
 }
 
 /* General Styles */
@@ -29,7 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /*********************************************************** NAV - BAR ***********************************************************/
@@ -45,7 +45,6 @@ body {
 /*Brand*/
 .brand {
   flex-wrap: wrap;
-  flex-direction: row;
   color: var(--highlight-color);
   display: flex;
   align-items: center;
@@ -215,8 +214,8 @@ ion-icon[name="home"] {
   border-radius: 0 calc(0.2 * var(--sidebar-width))
     calc(0.2 * var(--sidebar-width)) 0;
   border: solid;
-  border-color: var(--highlight-color);
-  border-width: 1px;
+  border-color: var(--secondary-color);
+  border-width: 5px;
   top: calc(var(--navbar-height) + 5vh);
   left: calc(-1 * var(--sidebar-width));
   width: var(--sidebar-width);
@@ -525,14 +524,12 @@ ion-icon[name="home"] {
   display: flex;
   align-items: center;
   flex-direction: column;
-  align-items: center;
   width: 40vw;
   height: calc(0.8 * var(--navbar-height));
 }
 
 .music-controls {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -554,7 +551,6 @@ ion-icon[name="home"] {
 
 .player-bar {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -583,8 +579,60 @@ ion-icon[name="home"] {
   white-space: nowrap;
 }
 
-/*********************************************************** MAIN ***********************************************************/
+/*********************************************************** MAIN-CONTENT ***********************************************************/
 
+.main-content{
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  height: calc(100vh - 1*var(--navbar-height));
+}
 
+.main-content-left, .main-content-right {
+  margin: 0;
+  padding: 5px;
+  width: 45vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border: solid;
+  border-color: var(--secondary-color);
+  border-width: 2px;
+  background: var(--primary-color);
+  color: var(--highlight-color);
+  overflow: hidden;
+}
+
+.main-content-right {
+  width: 100%;
+}
+
+/*********************************************************** LIBRARY ***********************************************************/
+
+.library{
+  margin: 0;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  color: var(--highlight-color);
+  border: solid;
+  border-color: black;
+  border-width: 10px;
+  background: var(--primary-color);
+  color: var(--highlight-color);
+  overflow-y: scroll;
+}
+
+.library::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
 
 /**********************************************************************************************************************/
