--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,15 @@
   <body>
     
     {% include 'header.html' %}
-    <div class="container">
-      {% block content %} {% endblock %}
+    <div class="main-content" {% if user %} style="height: calc(100vh - 2*var(--navbar-height));"{% endif %}>
+      <div class="main-content-left">
+        {% include 'library.html' %}
+      </div>
+      <div class="main-content-right">
+        {% block content %} {% endblock %}
+      </div>
     </div>
-    {%if user %}    
+    {%if user %}  
     {% include 'player.html' %}
     {% endif %}
     
